[package]
name = "binance-claw"
version = "1.0.0"
edition = "2021"
authors = ["deepcon3"]
description = "⚡ Lightning-fast Binance price sniper & OpenClaw skill — monitor, alert and auto-grab crypto targets in real-time"
license = "MIT"
repository = "https://github.com/deepcon3/Binance-Claw"
homepage = "https://github.com/deepcon3/Binance-Claw"
keywords = ["binance", "crypto", "trading", "sniper", "openclaw"]
categories = ["command-line-utilities", "api-bindings"]
readme = "README.md"

[[bin]]
name = "binance-claw"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP + WebSocket
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }
tokio-tungstenite = { version = "0.20", features = ["rustls-tls-native-roots"] }
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive", "color", "env"] }
colored = "2"

# Config
config = "0.13"
toml = "0.8"
dirs = "5"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Crypto / HMAC for signed API requests
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Notification (desktop alerts)
# notify-rust = { version = "4.9", optional = true }  # enable after Rust 1.85+

# Sound alert (optional — uncomment and add rodio dep after Rust 1.80+)
# rodio = { version = "0.17", optional = true, default-features = false, features = ["mp3"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Terminal UI
indicatif = "0.17"
console = "0.15"

[features]
default = []
sound = []
full = ["sound"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
